--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,4 +4,5 @@
 @import url("global/layout.css");
 @import url("global/colors.css");
 @import url("global/typo.css");
-@import url("global/button.css");
+@import url("global/buttons.css");
+@import url("global/utils.css");
