add hobbies to about

--- a/assets/css/global/utils.css
+++ b/assets/css/global/utils.css
@@ -51,6 +51,10 @@
   background-color: var(--secondary-light);
 }
 
+.bg-color-dark {
+  background-color: var(--background-dark);
+}
+
 /* .margin-left-1x {
   margin-left: 1rem;
 }
