--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -6,3 +6,4 @@
 @import url("global/typo.css");
 @import url("global/buttons.css");
 @import url("global/utils.css");
+@import url("global/inputs.css");
