--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -7,3 +7,4 @@
 @import url("global/buttons.css");
 @import url("global/utils.css");
 @import url("global/inputs.css");
+@import url("global/animations.css");
