--- a/assets/css/components/contact.css
+++ b/assets/css/components/contact.css
@@ -7,6 +7,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
   padding-top: 2rem;
+  padding-bottom: 2rem;
   gap: 2rem;
 }
 
