--- a/assets/css/components/footer.css
+++ b/assets/css/components/footer.css
@@ -6,11 +6,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 3em;
-  padding: 3em 1em;
+  gap: 1em;
+  padding: 2rem 1rem;
 }
 
 .footer__content__title {
   text-align: center;
   line-height: 1em;
 }
+
