--- a/assets/css/global/inputs.css
+++ b/assets/css/global/inputs.css
@@ -93,3 +93,71 @@
 .select--error {
   border: 1px solid var(--error)
 }
+
+.radio,
+.checkbox {
+  display: flex;
+  gap: .5rem;
+  align-items: baseline;
+  
+}
+
+.radio__input,
+.checkbox__input  {
+  width: 16px;
+  height: 16px;
+  margin: 2px;
+  /* rompe la apariencia por default */
+  appearance: none;
+  /* Agregamos nuestros estilos */
+  border: 1px solid var(--gray-700);
+  border-radius: 50%;
+}
+
+.checkbox__input {
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.radio__input:checked {
+  border: 4px solid var(--primary);
+}
+
+.radio__message,
+.checkbox__message {
+  display: block;
+  color: var(--gray-500);
+  font-size: 0.75rem;
+  line-height: 1.125rem;
+  font-weight: 300;
+}
+
+.radio-group,
+.checkbox-group {
+  display: flex;
+  flex-direction: row;
+  gap: .75rem;
+}
+
+.radio-group--vertical,
+.checkbox-group--vertical {
+  flex-direction: column;
+  margin-top: 1rem;
+}
+
+.checkbox__input:checked {
+  background-color: var(--blue-500);
+  border: 1px solid var(--primary);
+
+  /* Cargar la imagen del check como backgound image */
+  background-image: url(/assets/images/icons/check.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#checkbox_1,
+#checkbox_2,
+#checkbox_3,
+#checkbox_4 {
+  transform: translate(0, 15%);
+}
