--- a/assets/css/global/utils.css
+++ b/assets/css/global/utils.css
@@ -58,3 +58,17 @@
 .bg-color-background {
   background-color: var(--background);
 }
+
+.bg-color-port-background {
+  background-color: var(--stone-200);
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.p-contact {
+  text-align: center;
+}
