--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,3 +4,4 @@
 @import url("components/about.css");
 @import url("components/article.css");
 @import url("components/contact.css");
+@import url("components/portfolio.css");
