--- a/assets/css/components/portfolio.css
+++ b/assets/css/components/portfolio.css
@@ -13,3 +13,32 @@
   padding: 2rem 2rem;
   border-radius: 1rem;
 }
+
+.mini__content {
+  display: flex;
+  padding-top: 1.2rem;
+  flex-direction: row;
+  gap: .5rem;
+}
+
+.mini-p {
+  background-color: bisque;
+  padding: 2px 10px;
+  border-radius: .5rem;
+}
+
+.icons-port {
+  display: flex;
+  flex-direction: row; 
+}
+
+svg {
+  transform: scale(1.2);
+  margin:8px;
+}
+
+.icon-corner {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 3rem;
+}
