--- a/assets/css/components/about.css
+++ b/assets/css/components/about.css
@@ -41,11 +41,13 @@ svg {
   gap: 0.625em;
 }
 
-.about-hobbies img {
-  border-radius: 8px;
+.about-hobbies__card img {
+  border-radius: 2.5rem;
+  max-width: 100%;
+  max-height: 13.75rem;
 }
 
-.about-hobbies p {
+.about-hobbies__card p {
   line-height: 30px;
   font-weight: 300;
   padding: 0 8px;
