--- a/assets/css/global/colors.css
+++ b/assets/css/global/colors.css
@@ -73,10 +73,10 @@
   --black: #171717;
   --white: #fff;
 
-  --primary-lighter: var(--pink-100);
-  --primary-light: var(--pink-300);
+  --primary-lighter: var(--blue-100);
+  --primary-light: var(--blue-300);
   --primary: var(--pink-600);
-  --primary-dark: var(--pink-700);
+  --primary-dark: var(--blue-700);
   --primary-darker: var(--pink-900);
   --secondary-lighter: var(--stone-100);
   --secondary-light: var(--stone-300);
